another section is done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bootstrap Culmn Projects</title>
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <footer>
@@ -16,10 +17,10 @@
             <div class="row">
                 <div class="col-4">
                   <div class="row mt-3">
-                    <img class="" width="350" src="images/lamp.jpg" alt="">
+                    <img class="img-fluid" src="images/lamp.jpg" alt="">
                   </div>
                   <div class="row mt-3">
-                    <img width="350" src="images/drinks.jpg" alt="">
+                    <img class="img-fluid" src="images/drinks.jpg" alt="">
                   </div>
                 </div>
                 <div class="col-4">
@@ -27,13 +28,13 @@
                     <img src="images/girl.jpg" alt="">
                    </div>
                    <div class="row mt-3">
-                    <img width="400" src="images/girl2.jpg" alt="">
+                    <img class="img-fluid" src="images/girl2.jpg" alt="">
                    </div>
                    <div class="row mt-3">
-                    <img width="400" src="images/girl3.jpeg" alt="">
+                    <img class="img-fluid" src="images/girl3.jpeg" alt="">
                    </div>
                    <div class="row mt-3">
-                    <img width="400" src="images/room.jpg" alt="">
+                    <img class="img-fluid" src="images/room.jpg" alt="">
                    </div>
                 </div>
                 <div class="col-4">
@@ -47,6 +48,32 @@
                         <img src="images/bottle2.jpg" alt="">
                     </div>
                 </div>
+            </div>
+        </div>
+     </section>
+     <!-- another section -->
+     <section class="mt-5">
+        <div class="container">
+            <div class="row g-0">
+                <div class="col-4 first-image">
+                    <img class="img-fluid" src="images/drinks.jpg" alt="">
+                </div>
+                <div class="col-8">
+                    <div class="row g-0 image-size">
+                    <div class="col-4">
+                       <img class="img-fluid" src="images/bottle.jpg" alt="">
+                    </div>
+                    <div class="col-4">
+                      <img class="img-fluid" src="images/watch.jpg" alt="">
+                    </div>
+                    <div class="col-4">
+                       <img class="img-fluid" src="images/bottle2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="row g-0 bottem-image">
+                    <img class="img-fluid" src="images/water.jpg" alt="">
+                 </div>
+            </div>
             </div>
         </div>
      </section>
